--- a/Cotuong_online/app/src/main/res/layout/activity_sign_up.xml
+++ b/Cotuong_online/app/src/main/res/layout/activity_sign_up.xml
@@ -19,7 +19,7 @@
         android:textSize="30sp"/>
 
     <EditText
-        android:id="@+id/user_email"
+        android:id="@+id/email_signup"
         android:drawableLeft="@drawable/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
