--- a/Cotuong_online/app/src/main/res/layout/activity_room.xml
+++ b/Cotuong_online/app/src/main/res/layout/activity_room.xml
@@ -68,7 +68,8 @@
         android:layout_width="350dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        android:background="#FFF" />
+        android:background="#FFF"
+        android:gravity="bottom"/>
 
     <LinearLayout
         android:layout_width="350dp"
@@ -97,6 +98,6 @@
         android:text="Ready"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
-        android:layout_marginTop="100dp"/>
+        android:layout_marginTop="20dp"/>
 
 </LinearLayout>
