--- a/Cotuong_online/app/src/main/res/layout/activity_watting.xml
+++ b/Cotuong_online/app/src/main/res/layout/activity_watting.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="Waiting for other player...\nTap anywhere to refresh."
+        android:text="Waiting for other player..."
         android:textSize="30sp"
         android:textColor="#000"/>
 
